-------------------------------------------------------------------------------
09/08/2012 Osi 0.105.5 released

-------------------------------------------------------------------------------
30/07/2012 Osi 0.105.4 released

25/07/2012 OsiGrb
  - fix mipstart option in OsiGrb: pass only values for discrete variables to Gurobi

-------------------------------------------------------------------------------
06/02/2012 Osi 0.105.3 released

-------------------------------------------------------------------------------
15/10/2011 Osi 0.105.2 released

12/11/2011 OsiSpx
  - add resolve with cleared basis if solve fails with exception (which may be due to a singular startbasis),
    needs SoPlex >= 1.5.0.7

-------------------------------------------------------------------------------
20/09/2011 Osi 0.105.1 released

03/09/2011 OsiMsk
  - fix bug in one loadProblem method when NULL was passed as row range array

30/07/2011 Osi
  - fix writing LP files with names: the objective name was not copied, leading to a segfault in CoinLpIO

30/07/2011 OsiSpx, OsiGlpk
  - allow NULLs for row* arguments in some loadProblem call

28/07/2011 OsiSpx
  - invert dual ray in getDualRays to match Osi definition when testing infeasibility proof

-------------------------------------------------------------------------------
16/07/2011 Osi 0.105.0 released

12/07/2011 MSVisualStudio
  - updated MSVC++ v10 project files to catch up with buildsystem changes

25/06/2011 Osi
  - add generic implementations of is{Primal,Dual}ObjectiveLimitReached

25/06/2011 OsiCommonTest
  - add unittest command line parameter -onerror to specify behaviour in case of a failing test 

23/06/2011 OsiMsk
  - add isLicenseError() to check whether last solve was abandoned due to a mosek licensing issue 

22/06/2011 OsiCpx
  - fix handling of primal/dual objective limit so it correctly takes objoffset into account
  - preserve objective sense also when empty model is loaded